# Final-Year-Project

./: .gitignore
MU3D-Package/: Unzipping the data.txt  Useage Agreement.docx
lie_detector/: README.md  main.py  pyproject.toml
lie_detector/agents/: lie_detect_agent.py
lie_detector/models/: audio_model.py  best_fusion_model.pth  fusion_model.py  text_model.py  vision_model.py
lie_detector/scripts/: evaluate_models.py  extract_mu3d.py  prepare_data.py  prepare_data_seq.py  reextract_audio_mfcc.py  reextract_vision.py  train.py  train_seq.py
