[tool.poetry]
name = "lie-detector"
version = "0.1.0"
description = "Multi-Modal Lie Detection System"
authors = ["Author <author@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = ">=2.0.0"
torchvision = ">=0.15.0"
transformers = ">=4.0.0"
opencv-python = ">=4.5.0"
opensmile = ">=2.4.2"
pandas = ">=1.5.0"
numpy = ">=1.20.0"
SpeechRecognition = ">=3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
